# My-MNIST-BP-Network

./: .gitignore  CMakeLists.txt  README.md
data/: README.md
include/: BPNeuralNetwork.h  BoxExtractor.h  Constants.h  ImageProcessing.h  MNISTLoader.h  Recognition.h
src/: BPNeuralNetwork.cpp  BoxExtractor.cpp  Constants.cpp  ImageProcessing.cpp  MNISTLoader.cpp  Recognition.cpp  main.cpp
